fix button gap

--- a/src/styles/Studentmanage.css
+++ b/src/styles/Studentmanage.css
@@ -266,7 +266,7 @@ tr:hover {
   border-radius: 4px;
   cursor: pointer;
   width: 80px;
-  margin-right: -100px;
+  margin-right: -70px;
 }
 
 
